# critical-learning-period-effect

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/data/: hard_indices.npy  new_train_indices.npy
artifacts/final_results_csv/: grid_search_bottleneck_MNIST.csv  grid_search_choke_MNIST.csv  grid_search_vanilla_MNIST.csv
experiments/: 0.0_construct_mnist_hard.ipynb  1.0_train_models_achilles.py  1.1_visualise_results_achilles.ipynb  1_archille_experiment.py  2.0_multichannel_variations.py  2.1_colour_mnist.py  2.2_colour_mnist_noisy.py  2.3_rotated_MNIST.py  2.4_permuted_MNIST.py  2.5_incremental_class_MNIST.py  2_colour_mnist.py  3.1_colour_mnist_diff_pretraining.py  3_noisy_colour_mnist.py  4_permuted_mnist.py  base_experiment.py
experiments/legacy/: 0.0_construct_mnist_hard.ipynb  1.0_train_models_achilles.py  1.1_visualise_results_achilles.ipynb  2.3_rotated_MNIST.py  2.6_visualise_results.ipynb  2.7_visualise_results_rotate.ipynb  3.1_colour_mnist_diff_pretraining.py
experiments/noisy_mnist/: gridsearch_experiment.py
utils/: callbacks.py  colour_mnist.py  data.py  new_noisy_mnist.py  result_analysis.py  visualise_results.py
utils/models/: achille.py  baselines.py  cnn.py  continual_back_prop.py  mlp.py
