[project]
name = "critical-learning-period-effect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "ruff>=0.13.2",
    "skorch>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
# Disable "module level import not at top of file" globally
ignore = ["I001"]
